# honryu

./: .env.template  .gitignore  LICENSE  README.md  honryu.vbs  main.py  pyproject.toml  translate_image.py
